--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "megas-bot",
+  "name": "sable",
   "module": "index.ts",
   "type": "module",
+  "scripts": {
+    "start": "bun run src/index.ts",
+    "dcommands": "bun run src/deploy-commands.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/node": "^22.5.5"
