--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_ID=
 CLIENT_ID=
 DISCORD_TOKEN=
 GUILD_ID=
 OWNER_ID=
-PUBLIC_KEY=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
+MUSIXMATCH_API_KEY=
+GIPHY_API_KEY=
